# projeto-2-de-perspectiva-em-ciencia-de-dados

./: README.md  pyproject.toml
projeto/dados/: urls_coletadas.csv
projeto/notebooks/webscrapping/: webscraping.ipynb
projeto/notebooks/webscrapping/.ipynb_checkpoints/: webscraping-checkpoint.ipynb
