[project]
name = "projeto-2-de-perspectiva-em-ciencia-de-dados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.5.8",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "notebook>=7.5.7",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "plotly>=6.8.0",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "tqdm>=4.68.2",
    "unidecode>=1.4.0",
]
